--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-pandas>=2.0
-numpy>=1.24
-matplotlib>=3.7
-scikit-learn>=1.3
-statsmodels>=0.14
-pmdarima>=2.0
-streamlit>=1.36
-plotly>=5.22
-pyyaml>=6.0
+pip==24.2
+setuptools<70
+wheel
+numpy==1.26.4
+scipy==1.11.4
+pandas==2.2.2
+matplotlib==3.8.4
+scikit-learn==1.4.2
+statsmodels==0.14.2
+pmdarima==2.0.4
+streamlit==1.37.1
+plotly==5.22.0
+pyyaml==6.0.1
+joblib==1.4.2
+
