--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ pandas==2.2.2
 matplotlib==3.8.4
 scikit-learn==1.4.2
 statsmodels==0.14.2
-pmdarima==2.0.4
+# pmdarima is optional; comment it out to avoid build failures
+# pmdarima==2.0.4
 streamlit==1.37.1
 plotly==5.22.0
 pyyaml==6.0.1
 joblib==1.4.2
-
